--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ machine:
 
 test:
   post:
+  bash cirle_jmeter.sh
    - rm -rf projects/results/*.jtl
    - rm -rf projects/results/*.xml
    - rm -rf projects/results/*.csv
