separate shell file6

--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
 machine:
   timezone:
     America/Los_Angeles
-  dpkg -l:
-    version: "jmeter: 2.3.4-2ubuntu2"
+  jmeter:
+    version: 2.3.4-2ubuntu2
 
 test:
   post:
