separate shell file11

--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,8 @@ machine:
 
 test:
   post:
-  - sh echo "singa"
-  -sh echo $PWD
+  - echo "singa"
+  - echo $PWD
   - sh ../circle_jmeter.sh
    - rm -rf projects/results/*.jtl
    - rm -rf projects/results/*.xml
