extra sh file to check95

--- a/circle.yml
+++ b/circle.yml
@@ -11,5 +11,7 @@ general:
 test:
   post:
   - echo "singa"
-
-  - sh circle_jmeter.sh
+  - sh jmeter.sh -n -t ../projects/"ABCD.jmx" -l ../projects/"ABCD.xml" -Djmeter.save.saveservice.output_format=xml -Jenv=QA
+  - cat ../projects/ABCD.xml
+  - cat ../projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+"
+  - $ex=1
