--- a/circle.yml
+++ b/circle.yml
@@ -14,5 +14,6 @@ test:
   - sh jmeter.sh -n -t ../projects/"ABCD.jmx" -l ../projects/"ABCD.xml" -Djmeter.save.saveservice.output_format=xml -Jenv=QA
   - cat ../projects/ABCD.xml
   - cat ../projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+"
+machine:
   environment:
       ex: 1
