extra sh file to check98

--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,4 @@ test:
   - echo "singa"
   - sh jmeter.sh -n -t ../projects/"ABCD.jmx" -l ../projects/"ABCD.xml" -Djmeter.save.saveservice.output_format=xml -Jenv=QA
   - cat ../projects/ABCD.xml
-  - cat ../projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+"
-machine:
-  environment:
-      ex: 1
+  - exit (cat ../projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
