--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,7 @@ general:
 
 test:
   post:
+  - cd bin
   - echo "singa"
   - sh jmeter.sh -n -t ../projects/"ABCD.jmx" -l ../projects/"ABCD.xml" -Djmeter.save.saveservice.output_format=xml -Jenv=QA
   - cat ../projects/ABCD.xml
