--- a/circle.yml
+++ b/circle.yml
@@ -11,5 +11,5 @@ general:
 test:
   post:
   - sh circle_jmeter.sh
-  - cat ../projects/ABCD.xml
-  - exit (cat ../projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
+  - cat /projects/ABCD.xml
+  - exit (cat /projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
