--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,5 @@ test:
   post:
   - sh circle_jmeter.sh
   - cat projects/ABCD.xml
-  - if [1=1] ;then echo "hi"; else echo "kkk" ;fi
-  - exit 0
+  - if ["S"="s"] ;then exit 0; else exit 1 ;fi
+
