extra sh file to check74

--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,5 @@ test:
   post:
   - sh circle_jmeter.sh
   - cat projects/ABCD.xml
-  - if [grep -oP '(?<=<title>).*?(?=</title>)' projects/ABCD.xml] ;then exit 0; else exit 1 ;fi
+  - if [shell grep -oP '(?<=<failure>).*?(?=</failure>)' projects/ABCD.xml] ;then exit 0; else exit 1 ;fi
 
