--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,6 @@ general:
 test:
   post:
   - sh circle_jmeter.sh
-  - cat ../projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+"
+  - cat projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+"
   - if [$var] ;then exit 0; else exit 1 ;fi
 
