extra sh file to check63

--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,6 @@ test:
   post:
   - sh circle_jmeter.sh
   - ab=$(cat projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
+  - echo $ab
   - if [$ab] ;then exit 0; else exit 1 ;fi
 
