extra sh file to check64

--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ general:
 test:
   post:
   - sh circle_jmeter.sh
-  - ab=$(cat projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
-  - echo $ab
-  - if [$ab] ;then exit 0; else exit 1 ;fi
+  - ABV=$(cat projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
+  - echo $ABV
+  - if [$ABV="true"] ;then exit 0; else exit 1 ;fi
 
