--- a/circle.yml
+++ b/circle.yml
@@ -11,8 +11,7 @@ general:
 test:
   post:
   - sh circle_jmeter.sh
-  - echo (cat projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
-  - ABV=(cat projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
-  - echo $ABV
-  - if [$ABV="true"] ;then exit 0; else exit 1 ;fi
+  - VAR=$(cat projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
+  - echo $VAR
+  - if [$VAR="true"] ;then exit 0; else exit 1 ;fi
 
