extra sh file to check67

--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,5 @@ test:
   - VAR=$(cat projects/ABCD.xml | grep -oPm1 "(?<=<failure>)[^<]+")
   - echo $VAR
   - if [$VAR="true"] ;then exit 0; else exit 1 ;fi
+  - VAR1=$(ls -1); echo $VAR1
 
