--- a/circle.yml
+++ b/circle.yml
@@ -11,4 +11,5 @@ general:
 test:
   post:
   - sh circle_jmeter.sh
+  - cat projects/ABCD.xml
   - VAR=$(cat projects/ABCD.xml | grep -oPm1 <failure>true<\/failure>);echo $VAR;if [ $VAR = "true" ] ;then exit 0; else exit 1 ;fi
