--- a/circle.yml
+++ b/circle.yml
@@ -12,4 +12,4 @@ test:
   post:
   - sh circle_jmeter.sh
   - cat projects/ABCD.xml
-  - VAR=$(cat projects/ABCD.xml | grep -oPm1 <failure>true<\/failure>);echo $VAR;if [ $VAR = "true" ] ;then exit 0; else exit 1 ;fi
+  - VAR=$(cat projects/ABCD.xml | grep -oPm1 <failure>true);echo $VAR;if [ $VAR = "true" ] ;then exit 0; else exit 1 ;fi
