run hackathon script 0104

--- a/circle.yml
+++ b/circle.yml
@@ -11,5 +11,4 @@ general:
 test:
   post:
   - sh circle_jmeter.sh
-  - cat projects/ABCD.xml
-  - VAR=$(cat projects/ABCD.xml | grep "<failure>");echo $VAR;if [ $VAR = "<failure>false</failure>" ] ;then exit 0; else exit 1 ;fi
+  - java -jar jtl2junit.jar --input projects/ABCD.jtl --output <junit.xml> [--testSuiteName Hackathon]
