--- a/circle.yml
+++ b/circle.yml
@@ -11,4 +11,5 @@ general:
 test:
   post:
   - sh circle_jmeter.sh
+  - cat projects/ABCD.jtl
   - java -jar jtl2junit.jar --input projects/ABCD.jtl --output junit.xml [--testSuiteName Hackathon]
